[project]
name = "deep-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[accept-rom-license,atari]>=0.29.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "nvidia-tensorrt>=99.0.0",
    "opencv-python>=4.10.0.84",
    "pyvirtualdisplay>=3.0",
    "tensorflow>=2.14.0",
    "torch>=2.4.1",
]
